Aress7/src/objects/Google_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Folder_id__c</fullName>
        <label>Folder id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scopes__c</fullName>
        <label>Scopes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Account_id__c</fullName>
        <label>Service Account id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Token_Endpoint__c</fullName>
        <label>Token Endpoint</label>
        <type>TextArea</type>
    </fields>
    <label>Google Settings</label>
</CustomObject>